@@ -222,8 +222,8 @@
       <Action name="XP_BredasMead">
         <Down>UseCollectible(1168)</Down>
       </Action>
-      <Action name="XP_Cake2022">
-        <Down>UseCollectible(10287)</Down>
+      <Action name="XP_Cake2023">
+        <Down>UseCollectible(11089)</Down>
       </Action>
     </Category>
       <!--
