@@ -1,3 +1,6 @@
+v2023-04-06
+Added Jubilee Cake 2023
+
 v2023-03-16
 Added Aderine, Fargrave Dregs Dealer. Thanks, bearbelly!
 
